# ncreversi

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: game.hpp  player.hpp  screen.hpp
src/: CMakeLists.txt  main.cpp
src/game/: game.cpp
src/player/: computerplayer.cpp  shellplayer.cpp
src/screen/: dynamic.cpp  initialize.cpp  static.cpp
